--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 format:
   html:
-    self-contained: true
+    self-contained: false
     toc: false
     page-layout: custom
     css: styles.css
